WIP: Removed unused properties from aggregator